kube/thoughts-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: thoughts
  namespace: default
spec:
  ports:
    - port: 280
      targetPort: 80
  selector:
    service: thoughts
  type: NodePort
