kube/thoughts-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thoughts-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - thoughts.greyh.at
      secretName: thoughts-tls
  defaultBackend:
    service:
      name: thoughts
      port:
        number: 280
  rules:
    - host: thoughts.greyh.at
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: thoughts
                port:
                  number: 280
